# postject

./: .gitattributes  .gitignore  .npmignore  CMakeLists.txt  CODEOWNERS  DEPENDENCIES  Makefile  README.markdown  build.sh  package-lock.json  package.json  postject-api.h  postject.py  test.S  test.c  test.cpp  test.list  test.sh
.circleci/: config.yml
.github/workflows/: semantic-commits.yml
examples/: Makefile  test.c  test.cpp  test.sh
patches/lief/: 0001-Add-API-to-remove-a-section-from-a-sgement.patch  0001-feat-add-log-level-with-l.patch  0001-fix-align-__LINKEDIT-vmsize-to-page-size.patch  0002-fix-increase-numberof_sections-when-adding-section-t.patch  0003-fix-set-correct-virtual-size-for-new-Mach-O-segment.patch
scripts/: build.mjs
src/: api.js  argsParser.js  cli.js  main.js  postject.cpp  postject.hpp  postject_wasm.cpp
test/: CMakeLists.txt  cli.mjs  test.c  test.cpp
tests/inject_and_retrieve_data_1GB/: test.c  test.sh
tests/inject_and_retrieve_data_1KB/: test.sh
tests/inject_and_retrieve_data_1MB/: test.sh
tests/inject_and_retrieve_data_3GB/: test.sh
